<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="4dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="10dp"
    android:background="@android:color/transparent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_back" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTVTime"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTVTemperature"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/_20"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_below="@id/idTVTime"
            android:textAlignment="center" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/idTVCondition"
            android:layout_below="@id/idTVTemperature"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:padding="4dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="image"
            tools:ignore="HardcodedText" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idTVWindSpeed"
            android:gravity="center"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:text="@string/speed_13kmph"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:layout_below="@id/idTVCondition"
            android:textAlignment="center" />

    </RelativeLayout>
    
    
</androidx.cardview.widget.CardView>